--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gsap": "^2.0.0",
     "isomorphic-fetch": "^2.2.1",
     "nuxt": "^1.0.0",
+    "slugify": "^1.3.0",
     "vuefire": "^1.4.5"
   },
   "devDependencies": {
