--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
       ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest"
     },
     "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/$1"
+      "^~/(.*)$": "<rootDir>/$1"
     },
     "snapshotSerializers": [
       "<rootDir>/node_modules/jest-serializer-vue"
