--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@vue/test-utils": "^1.0.0-beta.16",
     "babel-jest": "^22.4.4",
     "dotenv": "^5.0.1",
-    "firebase": "^5.0.3",
     "gsap": "^2.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^22.4.4",
@@ -26,8 +25,7 @@
     "nuxt": "^1.0.0",
     "slugify": "^1.3.0",
     "vue-jest": "^2.6.0",
-    "vue-test-utils": "^1.0.0-beta.11",
-    "vuefire": "^1.4.5"
+    "vue-test-utils": "^1.0.0-beta.11"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
@@ -51,6 +49,10 @@
     },
     "snapshotSerializers": [
       "<rootDir>/node_modules/jest-serializer-vue"
+    ],
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(js|vue|json)$",
+    "setupFiles": [
+      "<rootDir>/jest.setup.js"
     ]
   }
 }
