--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@babel/plugin-transform-runtime": "^7.0.0-beta.47",
     "@vue/test-utils": "^1.0.0-beta.16",
     "babel-jest": "^22.4.4",
+    "cross-env": "^5.1.6",
     "dotenv": "^5.0.1",
     "gsap": "^2.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^22.4.4",
     "jest-serializer-vue": "^1.0.0",
     "nuxt": "^1.0.0",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-custom-properties": "^7.0.0",
+    "postcss-nested": "^3.0.0",
     "slugify": "^1.3.0",
     "vue-jest": "^2.6.0",
     "vue-test-utils": "^1.0.0-beta.11"
