--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vue/test-utils": "^1.0.0-beta.16",
     "babel-jest": "^22.4.4",
     "cross-env": "^5.1.6",
+    "debounce": "^1.1.0",
     "dotenv": "^5.0.1",
     "gsap": "^2.0.0",
     "isomorphic-fetch": "^2.2.1",
