--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.0.0-beta.47",
     "@vue/test-utils": "^1.0.0-beta.16",
+    "apicache": "^1.2.1",
     "babel-jest": "^22.4.4",
     "cross-env": "^5.1.6",
     "debounce": "^1.1.0",
