--- a/package.json
+++ b/package.json
@@ -14,31 +14,31 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.47",
-    "@vue/test-utils": "^1.0.0-beta.16",
-    "apicache": "^1.2.1",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@vue/test-utils": "^1.0.0-beta.25",
+    "apicache": "^1.2.3",
     "babel-jest": "^22.4.4",
-    "cross-env": "^5.1.6",
-    "debounce": "^1.1.0",
+    "cross-env": "^5.2.0",
+    "debounce": "^1.2.0",
     "dotenv": "^5.0.1",
-    "gsap": "^2.0.0",
+    "gsap": "^2.0.2",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^22.4.4",
     "jest-serializer-vue": "^1.0.0",
-    "nuxt": "^1.0.0",
+    "nuxt": "^1.4.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-custom-properties": "^7.0.0",
     "postcss-nested": "^3.0.0",
-    "slugify": "^1.3.0",
+    "slugify": "^1.3.1",
     "vue-jest": "^2.6.0",
     "vue-test-utils": "^1.0.0-beta.11"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.1",
+    "babel-eslint": "^8.2.6",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.7.1"
   },
   "jest": {
     "moduleFileExtensions": [
