--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@vue/test-utils": "^1.0.0-beta.25",
     "apicache": "^1.2.3",
-    "babel-jest": "^22.4.4",
+    "babel-jest": "^23.6.0",
     "cross-env": "^5.2.0",
     "debounce": "^1.2.0",
     "dotenv": "^5.0.1",
     "gsap": "^2.0.2",
     "isomorphic-fetch": "^2.2.1",
-    "jest": "^22.4.4",
+    "jest": "^23.6.0",
     "jest-serializer-vue": "^1.0.0",
-    "nuxt": "^1.4.2",
+    "nuxt": "^2.2.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-custom-properties": "^7.0.0",
     "postcss-nested": "^3.0.0",
@@ -34,11 +34,12 @@
     "vue-test-utils": "^1.0.0-beta.11"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.6",
-    "eslint": "^4.15.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.7.1"
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.7.0",
+    "eslint-config-standard-jsx": "^6.0.2",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-html": "^4.0.6",
+    "eslint-plugin-vue": "^5.0.0-beta.3"
   },
   "jest": {
     "moduleFileExtensions": [
