--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/plugin-transform-runtime": "^7.1.0",
     "@vue/test-utils": "^1.0.0-beta.25",
     "apicache": "^1.2.3",
     "babel-jest": "^23.6.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
     "cross-env": "^5.2.0",
     "debounce": "^1.2.0",
     "dotenv": "^5.0.1",
@@ -30,10 +31,11 @@
     "postcss-custom-properties": "^7.0.0",
     "postcss-nested": "^3.0.0",
     "slugify": "^1.3.1",
-    "vue-jest": "^2.6.0",
+    "vue-jest": "^3.0.0",
     "vue-test-utils": "^1.0.0-beta.11"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.1.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.7.0",
     "eslint-config-standard-jsx": "^6.0.2",
