--- a/package.json
+++ b/package.json
@@ -14,34 +14,34 @@
     "test": "jest"
   },
   "dependencies": {
-    "@vue/test-utils": "^1.0.0-beta.25",
+    "@babel/preset-env": "^7.1.0",
     "apicache": "^1.2.3",
-    "babel-jest": "^23.6.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
+    "core-js": "^2.5.7",
     "cross-env": "^5.2.0",
     "debounce": "^1.2.0",
-    "dotenv": "^5.0.1",
+    "dotenv": "^6.1.0",
     "gsap": "^2.0.2",
     "isomorphic-fetch": "^2.2.1",
-    "jest": "^23.6.0",
-    "jest-serializer-vue": "^1.0.0",
     "nuxt": "^2.2.0",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-custom-properties": "^7.0.0",
-    "postcss-nested": "^3.0.0",
-    "slugify": "^1.3.1",
-    "vue-jest": "^3.0.0",
-    "vue-test-utils": "^1.0.0-beta.11"
+    "postcss-nested": "^4.1.0",
+    "slugify": "^1.3.2"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.1.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.7.0",
-    "eslint-config-standard-jsx": "^6.0.2",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-html": "^4.0.6",
-    "eslint-plugin-vue": "^5.0.0-beta.3"
+    "@babel/runtime": "^7.1.2",
+    "@vue/test-utils": "^1.0.0-beta.25",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^8.2.1",
+    "babel-jest": "^23.6.0",
+    "eslint": "^5.0.1",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-prettier": "2.6.2",
+    "eslint-plugin-vue": "^4.0.0",
+    "jest": "^23.6.0",
+    "jest-serializer-vue": "^2.0.2",
+    "nodemon": "^1.11.0",
+    "prettier": "1.14.3",
+    "vue-jest": "^3.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -51,7 +51,7 @@
     ],
     "transform": {
       "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
-      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest"
+      ".*\\.vue$": "<rootDir>/node_modules/vue-jest"
     },
     "moduleNameMapper": {
       "^~/(.*)$": "<rootDir>/$1"
