--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,10 @@ language: node_js
 services: docker
 node_js:
   - "10"
-before_install:
-  - "npm i -g npm@v6.0.1"
 cache:
   -
     directories:
+      - ~/.npm
       - node_modules
 install:
   - "npm install"
@@ -18,4 +17,6 @@ script:
   - "npm run build"
 
 after_success:
+  - npm install -g travis-deploy-once
+  - travis-deploy-once "npm run semantic-release"
   - '[ "$TRAVIS_PULL_REQUEST" = "false" ] && [ "$TRAVIS_BRANCH" = "master" ] && curl -H "Content-Type: application/json" --data "{\"build\": true}" -X POST $DOCKER_PUSH_URL'
