--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ script:
   - "npm run build"
 
 after_success:
-  - npm install -g travis-deploy-once
-  - travis-deploy-once "npm run semantic-release"
+  - '[ "$TRAVIS_BRANCH" = "master" ] && npm install -g travis-deploy-once'
+  - '[ "$TRAVIS_BRANCH" = "master" ] && npm run travis-deploy-once "npm run semantic-release"'
   - '[ "$TRAVIS_PULL_REQUEST" = "false" ] && [ "$TRAVIS_BRANCH" = "master" ] && curl -H "Content-Type: application/json" --data "{\"build\": true}" -X POST $DOCKER_PUSH_URL'
