--- a/package.json
+++ b/package.json
@@ -16,36 +16,36 @@
     "travis-deploy-once": "travis-deploy-once --pro"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-env": "^7.3.1",
     "apicache": "^1.2.3",
-    "core-js": "^2.5.7",
+    "core-js": "^2.6.4",
     "cross-env": "^5.2.0",
     "debounce": "^1.2.0",
-    "dotenv": "^6.1.0",
+    "dotenv": "^6.2.0",
     "gsap": "^2.0.2",
     "isomorphic-fetch": "^2.2.1",
-    "nuxt": "^2.2.0",
-    "postcss-nested": "^4.1.0",
-    "slugify": "^1.3.2"
+    "nuxt": "^2.4.3",
+    "postcss-nested": "^4.1.1",
+    "slugify": "^1.3.4"
   },
   "devDependencies": {
-    "@babel/runtime": "^7.1.2",
-    "@vue/test-utils": "^1.0.0-beta.25",
+    "@babel/runtime": "^7.3.1",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.1",
     "babel-jest": "^23.6.0",
-    "eslint": "^5.0.1",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-loader": "^2.0.0",
+    "eslint": "^5.13.0",
+    "eslint-config-prettier": "^3.6.0",
+    "eslint-loader": "^2.1.2",
     "eslint-plugin-prettier": "2.6.2",
     "eslint-plugin-vue": "^4.0.0",
     "jest": "^23.6.0",
     "jest-serializer-vue": "^2.0.2",
-    "nodemon": "^1.11.0",
+    "nodemon": "^1.18.10",
     "prettier": "1.14.3",
-    "vue-jest": "^3.0.0",
-    "semantic-release": "^15.10.7",
-    "travis-deploy-once": "^5.0.9"
+    "semantic-release": "^15.13.3",
+    "travis-deploy-once": "^5.0.11",
+    "vue-jest": "^3.0.3"
   },
   "jest": {
     "moduleFileExtensions": [
