--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vue/composition-api": "^0.4.0",
     "gsap": "^3.2.4",
     "nuxt": "^2.0.0",
+    "nuxt-graphql-request": "^1.0.1",
     "nuxt-typed-vuex": "^0.1.17",
     "postcss-nested": "^4.2.1",
     "slugify": "^1.4.0",
