--- a/package.json
+++ b/package.json
@@ -13,30 +13,30 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxt/types": "^2.14.7",
     "@nuxtjs/dotenv": "^1.4.0",
-    "@nuxtjs/pwa": "^3.0.0-0",
-    "@vue/composition-api": "^0.4.0",
-    "gsap": "^3.2.4",
-    "nuxt": "^2.0.0",
-    "nuxt-graphql-request": "^1.0.1",
-    "nuxt-typed-vuex": "^0.1.17",
-    "postcss-nested": "^4.2.1",
-    "slugify": "^1.4.0",
-    "vuex": "^3.1.3"
+    "@nuxtjs/pwa": "^3.2.2",
+    "@vue/composition-api": "^0.6.7",
+    "gsap": "^3.5.1",
+    "nuxt": "^2.14.7",
+    "nuxt-typed-vuex": "^0.1.22",
+    "postcss-nested": "^4.0.1",
+    "slugify": "^1.4.6",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "^0.6.0",
-    "@nuxtjs/eslint-config": "^2.0.0",
-    "@nuxtjs/eslint-config-typescript": "^1.0.2",
-    "@nuxtjs/eslint-module": "^1.0.0",
-    "@vue/test-utils": "^1.0.0-beta.27",
-    "babel-jest": "^24.1.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^24.1.0",
-    "prettier": "^1.19.1",
-    "vue-jest": "^4.0.0-0"
+    "@nuxt/typescript-build": "^2.0.3",
+    "@nuxtjs/eslint-config": "^5.0.0",
+    "@nuxtjs/eslint-config-typescript": "^5.0.0",
+    "@nuxtjs/eslint-module": "^3.0.1",
+    "@vue/test-utils": "^1.1.1",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.0",
+    "vue-jest": "^5.0.0-alpha.6"
   }
 }
